# twenty-fourty-eight

./: .gitignore  BENCHMARKING.md  BUGS.md  CLAUDE.md  DESIGN_DECISIONS.md  FUTURE.md  README.md  RESEARCH.md  rust-toolchain.toml
config/: config-dev.toml  config.toml
config/models/: ntuple-4x6-td0-100K.meta.toml  ntuple-4x6-td0-1M-optinit.meta.toml  ntuple-4x6-td0-1M.meta.toml
engine/: Cargo.toml
engine/src/: board.rs  direction.rs  game.rs  game_over.rs  lib.rs  moves.rs  spawning.rs
frontend/: Cargo.toml
frontend/src/: connection.rs  lib.rs  protocol.rs  render.rs
model/: Cargo.toml
model/src/: dummy.rs  lib.rs  ntuple_agent.rs
queue/: Cargo.toml
queue/src/: lib.rs  queue.rs
scripts/: 2048-server.service  2048-training-queue.service  DEPLOYMENT.md  README.md  bench-matrix.sh  bootstrap-user.sh  build.sh  deploy-server.sh  deploy-training.sh  deploy.sh
server/: Cargo.toml
server/src/: agent_loop.rs  config.rs  main.rs  model_registry.rs  model_watcher.rs  protocol.rs  queue_stream.rs  session.rs  training_stream.rs  websocket.rs
skills/: training.md
skills/training/: SKILL.md
training/: BENCHMARKING.md  Cargo.toml  training_log.jsonl
training/.cargo/: config.toml
training/src/: config.rs  daemon.rs  eval.rs  eval_dummy.rs  lib.rs  main.rs  memory.rs  ntuple.rs  queue.rs  queue_ops.rs  run_args.rs  runner.rs  tc_state.rs  training.rs
