[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AddEventListenerOptions",
    "Document",
    "Element",
    "EventTarget",
    "HtmlElement",
    "HtmlSelectElement",
    "KeyboardEvent",
    "Location",
    "MessageEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WebSocket",
    "Window",
    "console",
] }
