[package]
name = "training"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true
lto = true
codegen-units = 1

[dependencies]
game-engine = { path = "../engine" }
model = { path = "../model" }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
notify = "8"

[dev-dependencies]
tempfile = "3"
